--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         Lotrèk 💚 Open Source
                     </h1>
                     <p class="hero__subtitle">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quis quod natus ipsa odio adipisci fuga expedita sapiente ratione voluptatibus. Ut hic quidem rem cupiditate ipsum, id quos adipisci commodi consectetur blanditiis, beatae fugiat iste nam! Et ad eveniet in?
+                        Lotrèk wasn't built in a day, but always on part of our 🧬: Open Source.<br/>Here you can find a list of our most important projects used in our daily work.<br/>Contributions are always welcome! ✌🏻
                     </p>
                 </div>
 
@@ -30,15 +30,15 @@
         </div>
     </div>
 
-    
+
     <div class="wrapper">
 
         <div class="preitems__outer">
             <div class="preitems">
                 <h2 class="preitems__title">
-                    Projects
+                    Projects 🛠
                 </h2>
-    
+
                 <div class="searchbar">
                     <input class="searchbar__input" type="text" name="search" placeholder="Search Projects" autocomplete="off">
                 </div>
@@ -52,7 +52,7 @@
     <footer class="footer">
         <div class="wrapper">
             <div class="footer__inner">
-                Copyright ©2015-19 Lotrek S.c.r.l.
+                Copyright ©2020 Lotrek S.c.r.l.
             </div>
         </div>
     </footer>
