Updated this repo to current year, replacing gulp with webpack and fixing various issues

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lotrèk 💚 Open Source</title>
-    <link rel="stylesheet" href="build/css/style.min.css">
+    <link rel="stylesheet" href="build/style.min.css">
 </head>
 <body>
     <div class="hero">
@@ -56,6 +56,6 @@
             </div>
         </div>
     </footer>
-    <script src="build/js/scripts.min.js" defer></script>
+    <script src="build/main.bundle.js" defer></script>
 </body>
 </html>
