--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lotrèk 💚 Open Source</title>
+    <title>Lotrèk 💖 Open Source</title>
     <link rel="stylesheet" href="build/style.min.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
 
                 <div class="hero__content">
                     <h1 class="hero__title">
-                        Lotrèk 💚 Open Source
+                        Lotrèk 💖 Open Source
                     </h1>
                     <p class="hero__subtitle">
                         Lotrèk wasn't built in a day, but always on part of our 🧬: Open Source.<br/>Here you can find a list of our most important projects used in our daily work.<br/>Contributions are always welcome! ✌🏻
@@ -23,7 +23,7 @@
                 </div>
 
                 <div class="hero__detail">
-                    <img src="assets/img/full_logo.svg" alt="" class="hero__img">
+                    <img src="assets/img/lotrek_logo.svg" alt="" class="hero__img">
                 </div>
 
             </div>
@@ -53,6 +53,9 @@
         <div class="wrapper">
             <div class="footer__inner">
                 Copyright ©2021 Lotrek S.c.r.l.
+            </div>
+            <div class="footer__detail">
+                <img src="assets/img/lotrek_payoff.svg" alt="" class="footer__img">
             </div>
         </div>
     </footer>
