--- a/readthedocs/mailupy_docs/autoapi/index.html
+++ b/readthedocs/mailupy_docs/autoapi/index.html
@@ -177,7 +177,7 @@
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2020, Lotrèk
+        &copy; Copyright 2020, Lotrek
 
     </p>
   </div>
