--- a/readthedocs/mailupy_docs/autoapi/mailupy/exceptions/index.html
+++ b/readthedocs/mailupy_docs/autoapi/mailupy/exceptions/index.html
@@ -180,7 +180,7 @@
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2020, Lotrèk
+        &copy; Copyright 2020, Lotrek
 
     </p>
   </div>
