--- a/readthedocs/mailupy_docs/autoapi/mailupy/utils/index.html
+++ b/readthedocs/mailupy_docs/autoapi/mailupy/utils/index.html
@@ -170,7 +170,7 @@
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2020, Lotrèk
+        &copy; Copyright 2020, Lotrek
 
     </p>
   </div>
