--- a/readthedocs/mailupy_docs/genindex.html
+++ b/readthedocs/mailupy_docs/genindex.html
@@ -399,7 +399,7 @@
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2020, Lotrèk
+        &copy; Copyright 2020, Lotrek
 
     </p>
   </div>
