--- a/readthedocs/mailupy_docs/index.html
+++ b/readthedocs/mailupy_docs/index.html
@@ -188,7 +188,7 @@
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2020, Lotrèk
+        &copy; Copyright 2020, Lotrek
 
     </p>
   </div>
