--- a/readthedocs/mailupy_docs/quickstart.html
+++ b/readthedocs/mailupy_docs/quickstart.html
@@ -290,7 +290,7 @@ After it you can start use the client for:</p>
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2020, Lotrèk
+        &copy; Copyright 2020, Lotrek
 
     </p>
   </div>
