fix: fix some styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lotrek 🤍 Open Source</title>
     <link rel="stylesheet" href="build/style.min.css">
+    <link rel="icon" type="image/png" href="assets/img/favicon.ico"/>
 </head>
 <body>
     <div class="hero">
@@ -23,7 +24,7 @@
                 </div>
 
                 <div class="hero__detail">
-                    <img src="https://avatars.githubusercontent.com/u/24320781" alt="" class="hero__img">
+                    <img src="assets/img/bigbang.svg" alt="" class="hero__img">
                 </div>
 
             </div>
